@@ -6,3 +6,5 @@ fluent interface for JointTrajectory
 removed coordination.Header, since it's just the same as the one taken from Ros: ros.msgs.std_msgs.Header
 
 default new Header(0, new Time(), "") in JointTrajectory
+
+default new Duration(120, 0) in JointTrajectoryPoint
